kubernetes/apps/base/network-system/echo-server/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.raspbernetes.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-server
  annotations:
    external-dns.alpha.kubernetes.io/target: '${CLOUDFLARED_INGRESS_DOMAIN}'
    external-dns.alpha.kubernetes.io/external: 'false'
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-ingress
  hostnames:
    - 'echo.${CLUSTER_DOMAIN}'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: '/'
      backendRefs:
        - name: echo-server
          namespace: network-system
          port: 80
